Bug 691843 - Luratech JPX decoder gives incorrect image
Summary: Luratech JPX decoder gives incorrect image
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: JPX/JBIG2 encode/decode (show other bugs)
Version: master
Hardware: All All
: P1 normal
Assignee: Alex Cherepanov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-16 23:38 UTC by Ray Johnston
Modified: 2011-10-02 02:35 UTC (History)
0 users

See Also:
Customer: 532
Word Size: ---


Attachments
AAJ.pdf (167.81 KB, application/pdf)
2010-12-16 23:38 UTC, Ray Johnston
Details
patch (1.99 KB, patch)
2010-12-18 19:26 UTC, Alex Cherepanov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ray Johnston 2010-12-16 23:38:33 UTC
Created attachment 7037 [details]
AAJ.pdf

When using the Luratech JPX decoder, the attached file has the wrong image.

It is fine with jasper.
Comment 1 Alex Cherepanov 2010-12-17 02:36:05 UTC
This is a combination of an indexed color space and 4 bit/pixel image.
It is not handled properly now but should be easy to fix.
Comment 2 Alex Cherepanov 2010-12-18 19:26:03 UTC
Created attachment 7047 [details]
patch

Implement correct bit packing for an indexed image with 4 bit/pixel color
depth in the interface to Luratech JPX library.
Comment 3 Alex Cherepanov 2010-12-18 19:27:57 UTC
The patch has been committed as a rev. 11962.