Implement correct bit packing for an indexed image with 4 bit/pixel color depth in the interface to Luratech JPX library. Bug 691843, customer 532.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11962 a1074d23-0009-0410-80fe-cf8c14f379e6